chore: Update docker packages in group_vars/docker.yaml file
Add the docker-buildx-plugin.
Comment dockerAptKeyId that is no longer needed due to the way we add the docker repo key.

--- a/group_vars/docker.yaml
+++ b/group_vars/docker.yaml
@@ -4,6 +4,13 @@
 dockerAptRepoUri: 'https://raw.githubusercontent.com/TituxMetal/cffa/main/apt/docker.list'
 dockerAptRepoName: docker
 dockerPackages:
-  ['docker-ce', 'docker-ce-cli', 'containerd.io', 'docker-compose-plugin', 'python3-docker']
+  [
+    'docker-ce',
+    'docker-ce-cli',
+    'containerd.io',
+    'docker-buildx-plugin',
+    'docker-compose-plugin',
+    'python3-docker'
+  ]
 dockerAptKeyUri: https://download.docker.com/linux/debian/gpg
-dockerAptKeyId: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
+# dockerAptKeyId: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
