chore: Update docker install playbook
Replace the aptKeyId variable with the aptRepoName and declare it on the main playbook vars to avoid duplication

--- a/playbooks/docker/install.yaml
+++ b/playbooks/docker/install.yaml
@@ -6,19 +6,16 @@
   vars:
     dockerPorts:
       [{ port: 2377, proto: 'tcp' }, { port: 7946, proto: 'any' }, { port: 4789, proto: 'udp' }]
+    aptRepoName: '{{ dockerAptRepoName }}'
     eximDestEmail: me@lgdweb.fr
     eximEmailSubject: 'Ansible docker install task done on server'
     eximEmailBody: 'All docker install tasks are done successfully'
   roles:
     # Add Docker apt repository
-    - {
-        role: roles/apt/repository,
-        aptRepoUrl: '{{ dockerAptRepoUri }}',
-        aptRepoName: '{{ dockerAptRepoName }}'
-      }
+    - { role: roles/apt/repository, aptRepoUrl: '{{ dockerAptRepoUri }}' }
 
     # Add docker Gpg key
-    - { role: roles/apt/keys, aptKeyUri: '{{ dockerAptKeyUri }}', aptKeyId: '{{ dockerAptKeyId }}' }
+    - { role: roles/apt/keys, aptKeyUri: '{{ dockerAptKeyUri }}' }
 
     # Install Docker package
     - { role: roles/apt/install, aptPackages: '{{ dockerPackages }}' }
