--- a/group_vars/standalone.yaml
+++ b/group_vars/standalone.yaml
@@ -29,6 +29,8 @@ dockerServicePortainerVolumes:
     '/etc/timezone:/etc/timezone:ro'
   ]
 
+dockerServicePortainerAgentFirewallPorts: [{ port: 9001, proto: 'tcp' }]
+
 # Docker service Nginx Proxy Manager
 dockerServiceProxyContainerName: 'nginx-proxy-manager-{{ inventory_hostname }}'
 dockerServiceProxyImage: 'jc21/nginx-proxy-manager:2.11.1'
