chore: Update webserver utils playbook with projectAppNetworks and projectAppEnvVars
This change updates the webserver utils playbook to include the projectAppNetworks and projectAppEnvVars variables for the Portainer agent docker container. It ensures that the container is connected to the default network and sets the necessary environment variables. This change is necessary to properly configure the Portainer agent and enable its functionality.

--- a/playbooks/webserver/utils.yaml
+++ b/playbooks/webserver/utils.yaml
@@ -11,16 +11,25 @@
     # Create reverse-proxy-nw network
     - { role: roles/docker/network, projectAppNetworkName: '{{ dockerServiceStandaloneNetwork }}' }
 
+    # Create default network
+    - {
+        role: roles/docker/network,
+        projectAppNetworkName: '{{ dockerServiceDefaultNetwork.name }}',
+        projectAppNetworkIpamConfig: '{{ dockerServiceDefaultNetwork.ipam_config }}'
+      }
+
     # Pull Poratiner agent image
     - { role: roles/docker/image, projectAppImageName: '{{ dockerServicePortainerImage }}' }
 
-    # Start Poratiner agent docker container
+    # Start Portainer agent docker container
     - {
         role: roles/docker/container,
         projectAppContainerName: '{{ dockerServicePortainerContainerName }}',
         projectAppImageName: '{{ dockerServicePortainerImage }}',
         projectAppPorts: '{{ dockerServicePortainerPorts }}',
         projectAppVolumes: '{{ dockerServicePortainerVolumes }}',
+        projectAppNetworks: '{{ dockerServicePortainerNetworks }}',
+        projectAppEnvVars: '{{ dockerServicePortainerEnvVars }}',
         projectAppRestartPolicy: 'always'
       }
 
