chore: Add the remove default-nw task in rollbackUtils webserver playbook

--- a/playbooks/webserver/rollbackUtils.yaml
+++ b/playbooks/webserver/rollbackUtils.yaml
@@ -48,3 +48,9 @@
         role: rollbacks/docker/network,
         projectAppNetworkName: '{{ dockerServiceStandaloneNetwork }}'
       }
+
+    # Remove default-nw network
+    - {
+        role: rollbacks/docker/network,
+        projectAppNetworkName: '{{ dockerServiceDefaultNetwork.name }}'
+      }
