chore: Update docker container role
This change adds the `projectAppCommand` variable to the defaults file and includes it in the tasks file. Additionally, it sets the `default_host_ip` and `comparisons` properties in the tasks file. These changes improve the flexibility and functionality of the docker container role.

--- a/roles/docker/container/defaults/main.yaml
+++ b/roles/docker/container/defaults/main.yaml
@@ -7,6 +7,7 @@ projectAppRestartPolicy: unless-stopped
 projectAppPrivileged: false
 projectAppCompatibility: no_defaults
 projectAppVolumes: []
+projectAppCommand: ''
 projectAppPorts: []
 projectAppEnvVars: {}
 projectAppNetworks: []
