chore: Update docker network role

--- a/roles/docker/network/tasks/main.yaml
+++ b/roles/docker/network/tasks/main.yaml
@@ -3,6 +3,7 @@
 - name: DOCKER NETWORK CREATE | Create docker network {{ projectAppNetworkName }}
   community.docker.docker_network:
     name: '{{ projectAppNetworkName }}'
+    ipam_config: '{{ projectAppNetworkIpamConfig }}'
     attachable: true
     state: present
   tags: [docker, networkCreate]
