chore: Update ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 interpreter_python = auto_silent
 inventory = hosts.yaml
+roles_path = /home/titux/tools/ansible/roles:/home/titux/tools/ansible/rollbacks
 vault_password_file = .vault
 retry_files_enabled = False
 ansible_python_interpreter = /usr/bin/python3
