--- a/roles/dockerServices/dataStructure/tasks/main.yaml
+++ b/roles/dockerServices/dataStructure/tasks/main.yaml
@@ -36,32 +36,59 @@
     src: '{{ tempDataDirectory }}/fail2ban/data/'
     dest: '{{ mainDataDirectory }}/fail2ban/data/'
     remote_src: true
-    mode: '0644'
+    force: true
+    mode: '0755'
   tags: [dockerServices, dataStructure, git]
 
 - name:
-    DOCKER SERVICE DATA STRUCTURE | Copy data directory structure for nginx-proxy-manager service
+    DOCKER SERVICE DATA STRUCTURE | Copy data directory structure for Nginx Proxy Manager service
     from {{ tempDataDirectory }}
   ansible.builtin.copy:
     src: '{{ tempDataDirectory }}/nginx-proxy-manager/data/'
     dest: '{{ mainDataDirectory }}/nginx-proxy-manager/data/'
     remote_src: true
     force: false
-    mode: '0644'
+    mode: '0755'
   tags: [dockerServices, dataStructure, git]
 
 - name:
-    DOCKER SERVICE DATA STRUCTURE | Copy logs data directory structure for utils services from {{
+    DOCKER SERVICE DATA STRUCTURE | Copy logs data directory structure for Fail2ban service from {{
     tempDataDirectory }}
   ansible.builtin.copy:
-    src: '{{ tempDataDirectory }}/logs'
-    dest: '{{ mainDataDirectory }}/'
+    src: '{{ tempDataDirectory }}/logs/fail2ban'
+    dest: '{{ mainDataDirectory }}/logs'
     remote_src: true
-    mode: preserve
+    mode: '0755'
     force: false
     owner: 1000
     group: 1000
-  tags: [dockerServices, dataStructure, git]
+  tags: [dockerServices, dataStructure, git, fail2ban]
+
+- name:
+    DOCKER SERVICE DATA STRUCTURE | Copy logs data directory structure for Nginx service from {{
+    tempDataDirectory }}
+  ansible.builtin.copy:
+    src: '{{ tempDataDirectory }}/logs/nginx'
+    dest: '{{ mainDataDirectory }}/logs'
+    remote_src: true
+    mode: '0755'
+    force: false
+    owner: 1000
+    group: 1000
+  tags: [dockerServices, dataStructure, git, nginx]
+
+- name:
+    DOCKER SERVICE DATA STRUCTURE | Copy logs data directory structure for Nginx Proxy Manager
+    service from {{ tempDataDirectory }}
+  ansible.builtin.copy:
+    src: '{{ tempDataDirectory }}/logs/nginx-proxy-manager'
+    dest: '{{ mainDataDirectory }}/logs'
+    remote_src: true
+    mode: '0755'
+    force: false
+    owner: 1000
+    group: 1000
+  tags: [dockerServices, dataStructure, git, nginx-proxy-manager]
 
 - name:
     DOCKER SERVICE DATA STRUCTURE | Copy data directory structure for portainer server service from
@@ -70,7 +97,7 @@
     src: '{{ tempDataDirectory }}/portainer/data/'
     dest: '{{ mainDataDirectory }}/portainer/data/'
     remote_src: true
-    mode: '0644'
+    mode: '0755'
     force: false
   when: inventory_hostname in groups['master']
   tags: [dockerServices, dataStructure, git]
