fix(rollbacks/exim): correct service facts registration and set_fact usage
- Removed unnecessary `register` directive for `service_facts`.
- Updated `set_fact` to use `ansible.builtin.set_fact` for better compatibility and linting compliance.

--- a/rollbacks/exim/config/tasks/main.yaml
+++ b/rollbacks/exim/config/tasks/main.yaml
@@ -23,11 +23,10 @@
 
 - name: ROLLBACK EXIM | Check if exim4 service exists
   ansible.builtin.service_facts:
-  register: service_facts
 
 - name: ROLLBACK EXIM | Register exim4 service existence
-  set_fact:
-    exim4_exists: "{{ 'exim4' in service_facts.ansible_facts.services }}"
+  ansible.builtin.set_fact:
+    exim4_exists: "{{ 'exim4' in service_facts.services }}"
   failed_when: false
   changed_when: false
   tags: [rollback, exim, check-exim4]
