feat(roles/docker/image): add forcePull variable to control image pulling behavior
- Introduced `force_source` parameter in the Docker image role to allow conditional image pulling.
- Default behavior remains unchanged unless `forcePull` is explicitly set.

--- a/roles/docker/image/tasks/main.yaml
+++ b/roles/docker/image/tasks/main.yaml
@@ -4,4 +4,5 @@
   community.docker.docker_image:
     name: '{{ projectAppImageName }}'
     source: pull
+    force_source: '{{ forcePull | default(false) }}'
   tags: [docker, pullImage]
