feat(playbooks/utils): add forcePull option for Portainer agent and server images
- Updated the Portainer agent image task to include `forcePull: true` to ensure the latest image is always pulled.
- Added `forcePull: true` for the Portainer server image task when running on master nodes.

--- a/playbooks/webserver/utils.yaml
+++ b/playbooks/webserver/utils.yaml
@@ -19,7 +19,11 @@
       }
 
     # Pull Poratiner agent image
-    - { role: roles/docker/image, projectAppImageName: '{{ dockerServicePortainerImage }}' }
+    - {
+        role: roles/docker/image,
+        projectAppImageName: '{{ dockerServicePortainerImage }}',
+        forcePull: true
+      }
 
     # Start Portainer agent docker container
     - {
@@ -52,6 +56,7 @@
     - role: roles/docker/image
       vars:
         projectAppImageName: '{{ dockerServicePortainerServerImage }}'
+        forcePull: true
       when: inventory_hostname in groups['master']
 
     # Start Portainer Server docker container
